--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="main.js"></script>
 </head>
 <body ng-app="myApp" ng-controller="myCtrl as ct">
-    <div class="title">Puzzle Addition</div>
+    <div class="title">Math Puzzles</div>
 
     <div class="alert">&nbsp;{{ct.msg}}&nbsp;</div>
 
