--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         {{ct.number2}}
         <br/>
         ---------------
+        <br/>
+        {{ct.correctAnswer}}
     </div>
     <form ng-submit="ct.next()">
         <input class="kidz" ng-model="ct.answer"/>
